--- a/peerlocal/package.json
+++ b/peerlocal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clerk-t3-minimal",
+  "name": "peerlocal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.17.3",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -22,7 +21,6 @@
     "@trpc/server": "^10.25.1",
     "clsx": "^1.2.1",
     "daisyui": "^2.51.6",
-    "discord-oauth2": "^2.11.0",
     "next": "13.4.1",
     "octokit": "^2.0.14",
     "react": "18.2.0",
