--- a/eth/package.json
+++ b/eth/package.json
@@ -44,7 +44,7 @@
     "dev": "cross-env MINING_INTERVAL=\"3000,5000\" hardhat node --hostname 0.0.0.0 --watch",
     "local:dev": "hardhat --network localhost deploy --watch",
     "execute": "node ./_scripts.js run",
-    "deploy": "node ./_scripts.js deploy",
+    "deploy": "pnpm run hardhat deploy",
     "verify": "node ./_scripts.js verify",
     "export": "node ./_scripts.js export",
     "hardhat": "hardhat",
