--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@preconstruct/cli": "^2.7.0"
+  }
 }
