--- a/peerlocal/package.json
+++ b/peerlocal/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "peerlocal/subgraph-client": "workspace:*",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
