--- a/peerlocal-sg/subgraph.yaml
+++ b/peerlocal-sg/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: PeerLocal
-    network: sepolia
+    network: goerli
     source:
-      address: "0x9A90f394b6de7E462669413fEf6D3e644B7Dd0E5"
       abi: PeerLocal
-      startBlock: 03655311
+      address: "0x9A90f394b6de7E462669413fEf6D3e644B7Dd0E5"
+      startBlock: 9149165
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -29,7 +29,8 @@ dataSources:
           handler: handleMemberJoinedCommunity
         - event: OfferAccepted(indexed uint256,indexed uint256,indexed address)
           handler: handleOfferAccepted
-        - event: OfferCreated(indexed uint256,uint256,indexed address,string,uint256,uint256)
+        - event: OfferCreated(indexed uint256,uint256,indexed
+            address,string,uint256,uint256)
           handler: handleOfferCreated
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
