--- a/eth/package.json
+++ b/eth/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
-    "@pinata/sdk": "^2.1.0",
-    "peerlocal/subgraph-client": "workspace:*",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.17",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts": "^4.8.3",
+    "@pinata/sdk": "^2.1.0",
     "@typechain/ethers-v5": "^10.2.1",
     "@typechain/hardhat": "^6.1.6",
     "@types/chai": "^4.3.5",
@@ -25,6 +25,7 @@
     "hardhat-deploy-tenderly": "^0.2.0",
     "hardhat-gas-reporter": "^1.0.9",
     "mocha": "^10.2.0",
+    "peerlocal/subgraph-client": "workspace:*",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.2",
@@ -57,7 +58,6 @@
     "fork:test": "node ./_scripts.js fork:test",
     "tenderly:push": "node ./_scripts.js tenderly:push",
     "swap:native": "hardhat swap:native",
-
     "create-community": "pnpm run hardhat pinata-create-community"
   }
 }
