--- a/peerlocal/package.json
+++ b/peerlocal/package.json
@@ -7,10 +7,14 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "codegen": "graphql-codegen --config src/graphql/codegen.ts",
+    "build:sg:client": "preconstruct build && npm run copy-package-json-to-dist"
   },
   "dependencies": {
-    "peerlocal/subgraph-client": "workspace:*",
+    "graphql": "^16.6.0",
+    "graphql-request": "5.1.0",
+    "graphql-tag": "^2.12.6",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -34,6 +38,11 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.5",
+    "@graphql-codegen/client-preset": "^1.3.0",
+    "@graphql-codegen/typescript": "^2.8.8",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.9",
+    "@graphql-codegen/typescript-operations": "^2.5.13",
     "@types/node": "^20.1.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
