--- a/peerlocal/tsconfig.json
+++ b/peerlocal/tsconfig.json
@@ -17,6 +17,6 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts"],
+  "exclude": ["node_modules", "src/typechain/*"]
 }
