--- a/peerlocal/package.json
+++ b/peerlocal/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
+    "@rainbow-me/rainbowkit": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
@@ -44,7 +45,7 @@
     "@graphql-codegen/typescript-operations": "^2.5.13",
     "@types/node": "^20.2.6",
     "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.10",
+    "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
