--- a/peerlocal/package.json
+++ b/peerlocal/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
-    "@rainbow-me/rainbowkit": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
@@ -29,11 +28,12 @@
     "next": "13.4.1",
     "octokit": "^2.0.19",
     "react": "18.2.0",
+    "ethers": "^5.7.2",
     "react-dom": "18.2.0",
     "superjson": "1.12.3",
     "theme-change": "^2.5.0",
-    "viem": "^0.3.50",
-    "wagmi": "^1.1.1",
+    "@rainbow-me/rainbowkit": "0.12.13",
+    "wagmi": "0.12.13",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
   },
