--- a/eth/package.json
+++ b/eth/package.json
@@ -60,5 +60,8 @@
     "tenderly:push": "node ./_scripts.js tenderly:push",
     "swap:native": "hardhat swap:native",
     "create-community": "pnpm run hardhat pinata-create-community"
+  },
+  "dependencies": {
+    "@aave/protocol-v2": "^1.0.1"
   }
 }
