--- a/peerlocal/package.json
+++ b/peerlocal/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
+    "@rainbow-me/rainbowkit": "0.12.13",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
@@ -22,17 +23,18 @@
     "@trpc/server": "^10.29.1",
     "clsx": "^1.2.1",
     "daisyui": "^2.52.0",
+    "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "graphql-request": "5.1.0",
     "graphql-tag": "^2.12.6",
+    "immer": "^10.0.2",
     "next": "13.4.1",
     "octokit": "^2.0.19",
     "react": "18.2.0",
-    "ethers": "^5.7.2",
     "react-dom": "18.2.0",
     "superjson": "1.12.3",
     "theme-change": "^2.5.0",
-    "@rainbow-me/rainbowkit": "0.12.13",
+    "use-immer": "^0.9.0",
     "wagmi": "0.12.13",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
