--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@preconstruct/cli": "^2.7.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "ts-node": "^10.9.1"
+  }
 }
